--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <h2 class="header-nav_logo">Shop</h2>
                 </div>
                 <ul class="header-nav-links-container">
-                    <li><a class="header-nav_home" href="/index.html">Home</a></li>
+                    <li><a class="header-nav_home" href="./index.html">Home</a></li>
                     <li><a class="header-nav_about" href="./pages/about.html">About</a></li>
                     <li><a class="header-nav_menu" href="./pages/menu.html">Menu</a></li>
                 </ul>
