--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/styles-header.css">
+    <link rel="stylesheet" href="./styles/footer.css">
+    <link rel="stylesheet" href="./styles/signUp.css">
+    <link rel="stylesheet" href="./styles/signIn.css">
 </head>
 <body>
     <header class="header-container">
@@ -82,5 +85,21 @@
             </article>
         </div>    
     </section>
+    <div class="quote-section">
+        <p class="quote">
+            A coffee shop is more than just a place to get your caffeine fix; it’s a hub for connection, creativity, and conversation—where stories are brewed as much as the coffee. ☕
+        </p>
+        <p class="author">- Anonim</p>
+    </div>
+    <br><br><br><br><br>
+    <div class="call-to-action">
+        <h2>Call to action! It’s time!</h2>
+        <p>Sign up for our newsletter by clicking that button right over there!</p>
+        <button class="sign-up-btn"><a href="signUp.html">Sign up</a></button>
+    </div>
+    <br><br><br><br><br>
+    <footer>
+        <p class="footer">Copyright &copy;</p>
+    </footer>
 </body>
 </html>
