--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/styles-header.css">
     <link rel="stylesheet" href="./styles/footer.css">
-    <link rel="stylesheet" href="./styles/signUp.css">
-    <link rel="stylesheet" href="./styles/signIn.css">
 </head>
 <body>
     <header class="header-container">
@@ -28,7 +26,8 @@
                     <li><a class="header-nav_menu" href="./pages/menu.html">Menu</a></li>
                 </ul>
             </nav>
-    </header>        
+    </header>  
+
     <section class="hero-main-container">
         <div class="hero-container">
             <div class="hero-content_container">
@@ -42,7 +41,6 @@
         </div>
     </section>
 
-    
     <section class="section-random-information_container">
         <div class="title-random-information_container">
             <h3 class="title-random-infomrmation">Some random information.</h3>
@@ -86,17 +84,22 @@
             </article>
         </div>    
     </section>
+<br><br><br>
     <div class="quote-section">
-        <p class="quote">
-            A coffee shop is more than just a place to get your caffeine fix; it’s a hub for connection, creativity, and conversation—where stories are brewed as much as the coffee. ☕
-        </p>
+        <div class="quote-container">
+            <p class="quote">
+                A coffee shop is more than just a place to get your caffeine fix; it’s a hub for connection, creativity, and conversation—where stories are brewed as much as the coffee. ☕
+            </p>
+        </div>
         <p class="author">- Anonim</p>
     </div>
     <br><br><br><br><br>
-    <div class="call-to-action">
-        <h2>Call to action! It’s time!</h2>
-        <p>Sign up for our newsletter by clicking that button right over there!</p>
-        <button class="sign-up-btn"><a href="signUp.html">Sign up</a></button>
+    <div class="log-container">
+        <div class="call-to-action">
+            <h2>Call to action! It’s time!</h2>
+            <p>Sign up for our newsletter by clicking that button right over there!</p>
+            <button class="sign-up-btn"><a href="./pages/signUp.html">Sign up</a></button>
+        </div>
     </div>
     <br><br><br><br><br>
     <footer>
