footer html, footer style, and media query

--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/styles-header.css">
     <link rel="stylesheet" href="./styles/footer.css">
-    <link rel="stylesheet" href="./styles/signUp.css">
-    <link rel="stylesheet" href="./styles/signIn.css">
 </head>
 <body>
     <header class="header-container">
@@ -86,19 +84,28 @@
             </article>
         </div>    
     </section>
-    <div class="quote-section">
-        <p class="quote">
-            A coffee shop is more than just a place to get your caffeine fix; it’s a hub for connection, creativity, and conversation—where stories are brewed as much as the coffee. ☕
-        </p>
-        <p class="author">- Anonim</p>
-    </div>
-    <br><br><br><br><br>
-    <div class="call-to-action">
-        <h2>Call to action! It’s time!</h2>
-        <p>Sign up for our newsletter by clicking that button right over there!</p>
-        <button class="sign-up-btn"><a href="signUp.html">Sign up</a></button>
-    </div>
-    <br><br><br><br><br>
+
+    <section class="quote-section">
+        <div class="quote-section_container">
+            <p class="quote">A coffee shop is more than just a place to get your caffeine fix; it is a hub for connection, creativity, and conversation—where stories are brewed as much as the coffee.</p>
+            <p class="author">-Anonim</p>
+        </div>
+    </section>
+    <section class="call-to-action">
+        <div class="call-to-action_container">
+            <div class="call-to-action-content_container">
+                <div class="div-content-extra_container">
+                    <h2>Call to action! It's time!</h2>
+                    <p class="sign-up-p">Sign up for our newsletter by clicking that button right over there!</p>
+                </div>    
+                <div class="sign-up-btn_container">
+                    <button class="sign-up-btn">
+                        <a href="signUp.html">Sign up</a>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer>
         <p class="footer">Copyright &copy;</p>
     </footer>
