--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>    
                 <div class="sign-up-btn_container">
                     <button class="sign-up-btn">
-                        <a href="signUp.html">Sign up</a>
+                        <a href="./pages/signUp.html">Sign up</a>
                     </button>
                 </div>
             </div>
