--- a/pages/signUp.html
+++ b/pages/signUp.html
@@ -3,11 +3,27 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../styles/styles.css">
         <link rel="stylesheet" href="../styles/signUp.css">
     </head>
     <body>
-        <div class="container">
+        <header class="header-about_container">
+            <div class="header-about-content_container">
+                <div class="header-nav-logo_container"> 
+                    <img class="coffee-logo" src="../assets/a logo for a coffee shop4.png" alt="coffee shop logo" height="44">
+                </div>    
+                <ul class="header-nav-links-container">
+                    <li><a class="header-nav_home" href="../index.html">Home</a></li>
+                    <li><a class="header-nav_about" href="../pages/about.html">About</a></li>
+                    <li><a class="header-nav_menu" href="../pages/menu.html">Menu</a></li>
+                </ul>
+            </div>
+        </header>
+        <section class="main-container">
+            <div class="container">
             <h2>Sign Up</h2>
             <form>
                 <div class="one-quest">
@@ -31,6 +47,7 @@
             <div class="login-link">
                 Do you have already an account? <a href="signIn.html">Sign in</a>
             </div>
-        </div>
+            </div>
+        </section>    
     </body>
 </html>
