--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="hero-main-container">
         <div class="hero-container">
             <div class="hero-content_container">
-                <h1 class="hero-title">Welcome to your local coffee haven</h1>
+                <h1 class="hero-title">Your local coffee haven</h1>
                 <p class="hero-paragraph">Paired with delicious pastries, in a space where you can slow down relax and enjoy life's simple pleasures. The perfect place for great coffee and good company</p>
                 <button class="hero-btn__events">Events</button>
             </div>
